--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "backend": "nodemon ./server.js",
+    "frontend":"cd .. && cd frontend && npm start",
+    "proyect": "concurrently --kill-others-on-fail \"npm run backend\" \"npm run frontend\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
