--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.13.1",
     "react-materialize": "^3.9.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-ui-cards": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
