--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.21",
     "react-materialize": "^3.9.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
