--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,20 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
     "react-materialize": "^3.9.2",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-ui-cards": "^2.0.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
